--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "private": true,
     "scripts": {
+        "vitedev": "vite",
+        "vitebuild": "vite build",
         "dev": "npm run development",
         "development": "mix",
         "watch": "mix watch",
@@ -10,9 +12,17 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.2",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
         "axios": "^0.25",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.4.6",
+        "tailwindcss": "^3.1.0"
+    },
+    "dependencies": {
+        "laravel-vite-plugin": "^0.7.4",
+        "vite": "^4.3.3"
     }
 }
