--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.7",
         "league/flysystem-ftp": "^3.15",
         "pion/laravel-chunk-upload": "^1.5",
+        "pusher/pusher-php-server": "^7.2",
         "realrashid/sweet-alert": "^7.1"
     },
     "require-dev": {
