--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
         "league/flysystem-ftp": "^3.15",
+        "phpmailer/phpmailer": "^6.8",
         "pion/laravel-chunk-upload": "^1.5",
         "pusher/pusher-php-server": "^7.2",
         "realrashid/sweet-alert": "^7.1"
