--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "realrashid/sweet-alert": "^7.1"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.9",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.19",
         "laravel/sail": "^1.0.1",
