--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
         "league/flysystem-ftp": "^3.15",
+        "microsoft/microsoft-graph": "^1.108",
         "phpmailer/phpmailer": "^6.8",
         "pion/laravel-chunk-upload": "^1.5",
         "pusher/pusher-php-server": "^7.2",
