--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "phpmailer/phpmailer": "^6.8",
         "pion/laravel-chunk-upload": "^1.5",
         "pusher/pusher-php-server": "^7.2",
-        "realrashid/sweet-alert": "^7.1"
+        "realrashid/sweet-alert": "^7.1",
+        "ext-curl": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
